# steady-current

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  evaluator.py  instructor.py  quiz.py  tools.py
app/db/: connection.py  migrate.py  relationships.yaml  repositories.py  resources.yaml  schema.sql  seed.py  topics.yaml
app/ingestion/: __init__.py  pipeline.py
app/models/: schemas.py
app/planner/: __init__.py  service.py
app/prompts/: instructor.md  quiz.md
app/retrieval/: chunking.py  embeddings.py  service.py
app/ui/: app.py
app/utils/: config.py
tests/: test_instructor_chat.py  test_planner.py  test_quiz_agent.py  test_retrieval_service.py
